# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header:  $

  12 Jun 2007; Christian Faulhammer <opfer@gentoo.org> elisp.eclass:
  remove an uncessary test

  11 Jun 2007; Christian Faulhammer <opfer@gentoo.org> elisp.eclass:
  set free the ghosts of the NEED_EMACS depending scheme, for the new-style
  Emacs virtuals

  04 Jun 2007; Ulrich Mueller <ulm@gentoo.org> elisp.eclass,
  elisp-common.eclass:
  New function elisp-emacs-version, works for all known Emacs versions.
  Use versionator.eclass for comparison of versions.

  04 Jun 2007; Christian Faulhammer <opfer@gentoo.org> elisp.eclass,
  elisp-common.eclass:
  added a comment about elisp-emacs-major-version() in the documentation;
  documented NEED_EMACS a bit, added some more comments

  04 Jun 2007; Christian Faulhammer <opfer@gentoo.org> elisp.eclass:
  export pkg_setup function; uncomment parts of it and add some checks and
  output for testing

  01 Jun 2007; Ulrich Mueller <ulm@gentoo.org> elisp.eclass:
  Depend on >=virtual/emacs-${VERSION} since this is what we later ask for.

  01 Jun 2007; Christian Faulhammer <opfer@gentoo.org> elisp.eclass,
  +elisp-common.eclass:
  provide elisp-emacs-major-version() in -common.eclass and use it in in
  pkg_setup

  31 May 2007; Christian Faulhammer <opfer@gentoo.org> +elisp.eclass:
  add inactive code for new style dependencies on virtual/emacs

  28 May 2007; Hans de Graaff <graaff@gentoo.org> +xemacs-elisp.class
  +xemacs-elisp-common.eclass:
  Add initial XEmacs elisp classes modelled after the Emacs elisp classes.

  16 Apr 2007; Christian Faulhammer <opfer@gentoo.org> -elisp.eclass,
  -elisp-common.eclass:
  removed as they are in Portage now

  14 Apr 2007; Ulrich Mueller <ulm@gentoo.org> elisp-common.eclass:
  E-mail address updated.

  11 Apr 2007; Ulrich Mueller <ulm@kph.uni-mainz.de> elisp-common.eclass:
  Document arguments of elisp-make-autoload-file().
